Fix: Change positioning of T-shape to remove overlap with I-shape

--- a/style.css
+++ b/style.css
@@ -253,15 +253,14 @@
     grid-template-rows: repeat(4, 30px);
     grid-column: 2;
     grid-row: 2;
-  }
-
+}
 
 /* T Shape */
 .shape-T {
     display: grid;
     grid-template-columns: repeat(3, 30px);
     grid-template-rows: repeat(2, 30px);
-    grid-column: 2;
+    grid-column: 8;
     grid-row: 2;
 }
 
